tests/errors/surf_exc_07.ki
# a starred unpack still needs enough values for the fixed targets
var a, b, *c, d, e = [1, 2]
